Updated Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-19 00:52-0600\n"
-"PO-Revision-Date: 2023-02-18 14:15+0100\n"
+"PO-Revision-Date: 2023-07-24 11:46+0200\n"
 "Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #: src/gpodder/config.py:53
 #, python-format
@@ -86,11 +86,11 @@ msgstr "Mislukt"
 
 #: src/gpodder/download.py:588 src/gpodder/sync.py:644
 msgid "Cancelling"
-msgstr "Bezig met annuleren…"
+msgstr "Bezig met afbreken…"
 
 #: src/gpodder/download.py:588 src/gpodder/sync.py:644
 msgid "Cancelled"
-msgstr "Geannuleerd"
+msgstr "Afgebroken"
 
 #: src/gpodder/download.py:588 src/gpodder/sync.py:644
 msgid "Pausing"
@@ -727,11 +727,11 @@ msgstr "Omlaag verplaatsen"
 
 #: src/gpodder/gtkui/main.py:1835
 msgid "Remove from list"
-msgstr "Verwijderen uit lijst"
+msgstr "Verwĳderen van lĳst"
 
 #: src/gpodder/gtkui/main.py:1891 share/gpodder/ui/gtk/menus.ui.h:17
 msgid "Update podcast"
-msgstr "Podcast bijwerken"
+msgstr "Podcast bĳwerken"
 
 #: src/gpodder/gtkui/main.py:1898 src/gpodder/gtkui/main.py:2201
 #: share/gpodder/ui/gtk/menus.ui.h:30
@@ -752,7 +752,7 @@ msgstr "Afbeelding verversen"
 
 #: src/gpodder/gtkui/main.py:1917
 msgid "Delete podcast"
-msgstr "Podcast verwijderen"
+msgstr "Podcast verwĳderen"
 
 #: src/gpodder/gtkui/main.py:1935 share/gpodder/ui/gtk/menus.ui.h:18
 msgid "Podcast settings"
@@ -788,7 +788,7 @@ msgstr "Kan niet opslaan in lokale map: %(error)r"
 
 #: src/gpodder/gtkui/main.py:2051
 msgid "Error converting file."
-msgstr "Fout bij converteren van bestand."
+msgstr "Fout bĳ converteren van bestand."
 
 #: src/gpodder/gtkui/main.py:2051
 msgid "Bluetooth file transfer"
@@ -833,7 +833,7 @@ msgstr "_Annuleren"
 #: src/gpodder/gtkui/main.py:2133 src/gpodder/gtkui/main.py:3199
 #: src/gpodder/gtkui/main.py:3623
 msgid "_Delete"
-msgstr "Verwij_deren"
+msgstr "Verwĳ_deren"
 
 #: src/gpodder/gtkui/main.py:2162
 msgid "Send to"
@@ -865,7 +865,7 @@ msgstr "Controleer je mediaspeler-instellingen in het voorkeurenvenster."
 
 #: src/gpodder/gtkui/main.py:2396
 msgid "Error opening player"
-msgstr "Fout bij openen van speler"
+msgstr "Fout bĳ openen van speler"
 
 #: src/gpodder/gtkui/main.py:2658
 msgid "Adding podcasts"
@@ -877,7 +877,7 @@ msgstr "Even geduld; de informatie van de aflevering wordt gedownload."
 
 #: src/gpodder/gtkui/main.py:2667
 msgid "Existing subscriptions skipped"
-msgstr "Bestaande abonnementen zijn overgeslagen"
+msgstr "Bestaande abonnementen zĳn overgeslagen"
 
 #: src/gpodder/gtkui/main.py:2668
 msgid "You are already subscribed to these podcasts:"
@@ -903,7 +903,7 @@ msgstr "Website-omleiding gedetecteerd"
 #: src/gpodder/gtkui/main.py:2692
 #, python-format
 msgid "The URL %(url)s redirects to %(target)s."
-msgstr "De url, %(url)s, verwijst naar %(target)s."
+msgstr "De url, %(url)s, verwĳst naar %(target)s."
 
 #: src/gpodder/gtkui/main.py:2693
 msgid "Do you want to visit the website now?"
@@ -915,7 +915,7 @@ msgstr "Sommige podcasts kunnen niet worden toegevoegd"
 
 #: src/gpodder/gtkui/main.py:2703
 msgid "Some podcasts could not be added to your list:"
-msgstr "Sommige podcasts kunnen niet worden toegevoegd aan je lijst:"
+msgstr "Sommige podcasts kunnen niet worden toegevoegd aan je lĳst:"
 
 #: src/gpodder/gtkui/main.py:2705
 msgid "Unknown"
@@ -923,7 +923,7 @@ msgstr "Onbekend"
 
 #: src/gpodder/gtkui/main.py:2789
 msgid "Redirection detected"
-msgstr "Verwijzing gedetecteerd"
+msgstr "Verwĳzing gedetecteerd"
 
 #: src/gpodder/gtkui/main.py:2823
 msgid "Merging episode actions"
@@ -931,11 +931,11 @@ msgstr "Afleveringsacties voor samenvoegen"
 
 #: src/gpodder/gtkui/main.py:2824
 msgid "Episode actions from gpodder.net are merged."
-msgstr "Afleveringsacties van gpodder.net zijn samengevoegd."
+msgstr "Afleveringsacties van gpodder.net zĳn samengevoegd."
 
 #: src/gpodder/gtkui/main.py:2850
 msgid "Cancelling..."
-msgstr "Bezig met annuleren…"
+msgstr "Bezig met afbreken…"
 
 #: src/gpodder/gtkui/main.py:2859
 msgid "Please connect to a network, then try again."
@@ -949,7 +949,7 @@ msgstr "Geen netwerkverbinding"
 #, python-format
 msgid "Updating %(count)d feed..."
 msgid_plural "Updating %(count)d feeds..."
-msgstr[0] "Bezig met bijwerken van %(count)d feed…"
+msgstr[0] "Bezig met bĳwerken van %(count)d feed…"
 msgstr[1] "Bezig met bijwerken van %(count)d feeds…"
 
 #: src/gpodder/gtkui/main.py:2898
@@ -2119,8 +2119,6 @@ msgstr ""
 "ondersteunde sites."
 
 #: share/gpodder/extensions/youtube-dl.py:593
-#, fuzzy
-#| msgid "Embed all available subtitles to downloaded video"
 msgid "Embed all available subtitles in downloaded video"
 msgstr "Alle beschikbare ondertitelingen in video's opnemen"
 
@@ -2553,14 +2551,12 @@ msgid "Episode descriptions"
 msgstr "Afleveringsomschrijvingen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:49
-#, fuzzy
-#| msgid "Show episode list"
 msgid "Show episode released time"
-msgstr "Afleveringenlijst tonen"
+msgstr "Publicatietĳd van afleveringen tonen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:50
 msgid "Right align episode released column"
-msgstr ""
+msgstr "Publicatiekolom rechts uitlĳnen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:51
 msgid "Require control click to sort episodes"
