--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-20 21:10+0200\n"
+"POT-Creation-Date: 2023-08-13 22:27-0600\n"
 "PO-Revision-Date: 2023-07-20 21:28+0200\n"
 "Last-Translator: Irénée Thirion <irenee.thirion@e.email>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
@@ -2157,6 +2157,45 @@ msgstr ""
 msgid "youtube-dl"
 msgstr "youtube-dl"
 
+#: share/gpodder/ui/gtk/gpodder.ui.h:5
+#: share/gpodder/ui/gtk/gpodderpreferences.ui.h:1
+#: share/gpodder/ui/gtk/menus.ui.h:1
+msgid "Preferences"
+msgstr "Préférences"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:7 share/gpodder/ui/gtk/menus.ui.h:9
+msgid "Check for new episodes"
+msgstr "Vérifier la présence de nouveaux épisodes"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:8
+msgid "Filter:"
+msgstr "Filtre :"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:9
+msgid "Podcasts"
+msgstr "Podcasts"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:10
+msgid "Resume all"
+msgstr "Reprendre tout"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:11
+msgid "Incomplete downloads from a previous session were found."
+msgstr ""
+"Des téléchargements incomplets d'une session précédente ont été trouvés."
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:12
+msgid "Limit rate to"
+msgstr "Limiter le débit à"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:13
+msgid "KiB/s"
+msgstr "KiB/s"
+
+#: share/gpodder/ui/gtk/gpodder.ui.h:14
+msgid "Limit downloads to"
+msgstr "Limiter le nombre de téléchargements à"
+
 #: share/gpodder/ui/gtk/gpodderaddpodcast.ui.h:1
 msgid "Add a new podcast"
 msgstr "Ajouter un nouveau podcast"
@@ -2250,11 +2289,6 @@ msgstr "..."
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:7
 msgid "Add"
 msgstr "Ajouter"
-
-#: share/gpodder/ui/gtk/gpodderpreferences.ui.h:1
-#: share/gpodder/ui/gtk/gpodder.ui.h:5 share/gpodder/ui/gtk/menus.ui.h:1
-msgid "Preferences"
-msgstr "Préférences"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:2
 msgid "_Edit config"
@@ -2390,39 +2424,6 @@ msgstr "Format YouTube privilégié (HLS) :"
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:37
 msgid "Preferred Vimeo format:"
 msgstr "Format Vimeo privilégié :"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:7 share/gpodder/ui/gtk/menus.ui.h:9
-msgid "Check for new episodes"
-msgstr "Vérifier la présence de nouveaux épisodes"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:8
-msgid "Filter:"
-msgstr "Filtre :"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:9
-msgid "Podcasts"
-msgstr "Podcasts"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:10
-msgid "Resume all"
-msgstr "Reprendre tout"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:11
-msgid "Incomplete downloads from a previous session were found."
-msgstr ""
-"Des téléchargements incomplets d'une session précédente ont été trouvés."
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:12
-msgid "Limit rate to"
-msgstr "Limiter le débit à"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:13
-msgid "KiB/s"
-msgstr "KiB/s"
-
-#: share/gpodder/ui/gtk/gpodder.ui.h:14
-msgid "Limit downloads to"
-msgstr "Limiter le nombre de téléchargements à"
 
 #: share/gpodder/ui/gtk/gpodderwelcome.ui.h:3
 msgid "<big>Welcome to gPodder</big>"
@@ -2851,6 +2852,10 @@ msgstr "quitter après le démarrage (pour le profilage)"
 msgid "Mac OS X application process number"
 msgstr "Numéro de processus de l'application Mac OS X"
 
+#: share/applications/gpodder-url-handler.desktop.in.h:1
+msgid "gPodder (subscribe to feed)"
+msgstr "s'abonner à l'URL donnée avec gPodder"
+
 #: share/applications/gpodder.desktop.in.h:2
 msgid "gPodder Podcast Client"
 msgstr "client de podcasts gPodder"
@@ -2862,7 +2867,3 @@ msgstr "Client de podcasts"
 #: share/applications/gpodder.desktop.in.h:4
 msgid "Subscribe to audio and video content from the web"
 msgstr "S'abonner à du contenu audio et vidéo depuis le web"
-
-#: share/applications/gpodder-url-handler.desktop.in.h:1
-msgid "gPodder (subscribe to feed)"
-msgstr "s'abonner à l'URL donnée avec gPodder"
