--- a/po/it.po
+++ b/po/it.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the GPODDER package.
 #
 # Translators:
+# bovirus <bovirus@gmail.com>, 2023.
 # Marco Ciampa <ciampix@posteo.net>, 2019-2022.
 # Alessandro Campidori  <alessandrocampidori@gmail.com>, 2012.
 # Andrea Scarpino <andrea@archlinux.org>, 2011.
@@ -12,10 +13,9 @@ msgstr ""
 "Project-Id-Version: gPodder -Translation v. 14.08.2023\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-08-13 22:27-0600\n"
-"PO-Revision-Date: 2023-08-14 12:32+0200\n"
-"Last-Translator: Maurizio Ballo <xmaurizio.13@hotmail.com>\n"
-"Language-Team: Italian (http://www.transifex.com/projects/p/gpodder/language/"
-"it/)\n"
+"PO-Revision-Date: 2023-08-14 14:50+0200\n"
+"Last-Translator: bovirus <bovirus@gmail.com>\n"
+"Language-Team: Italian (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1948,12 +1948,11 @@ msgstr "Visualizza notifiche per diversi eventi."
 
 #: share/gpodder/extensions/rename_download.py:18
 msgid "Rename episodes after download"
-msgstr "Rinomina episodi dopo il download"
+msgstr "A fine download rinomina gli episodi"
 
 #: share/gpodder/extensions/rename_download.py:19
 msgid "Rename episodes to \"<Episode Title>.<ext>\" on download"
-msgstr ""
-"Rinomina episodi in \"<Titolo Episodio>.<estensione>\" dopo il download"
+msgstr "A fine download rinomina episodi in \"<Titolo Episodio>.<estensione>\""
 
 #: share/gpodder/extensions/rename_download.py:54
 #: share/gpodder/extensions/rename_download.py:61
@@ -2511,7 +2510,7 @@ msgstr "Sincronizza il dispositivo"
 
 #: share/gpodder/ui/gtk/menus.ui.h:36
 msgid "_View"
-msgstr "_Vista"
+msgstr "_Visualizza"
 
 #: share/gpodder/ui/gtk/menus.ui.h:37
 msgid "Toolbar"
