--- a/po/sk.po
+++ b/po/sk.po
@@ -492,7 +492,7 @@ msgstr "Potvrdiť zmeny z gpodder.net"
 
 #: src/gpodder/gtkui/main.py:620
 msgid "Select the actions you want to carry out."
-msgstr "Vyberte akciu, kterou chcete vykonať."
+msgstr "Vyberte akciu, ktorú chcete vykonať."
 
 #: src/gpodder/gtkui/main.py:624
 msgid "A_pply"
