fix another typo

--- a/po/sk.po
+++ b/po/sk.po
@@ -492,7 +492,7 @@ msgstr "Potvrdiť zmeny z gpodder.net"
 
 #: src/gpodder/gtkui/main.py:620
 msgid "Select the actions you want to carry out."
-msgstr "Vyberte akciu, ktorú chcete vykonať."
+msgstr "Vyberte akcie, ktoré chcete vykonať."
 
 #: src/gpodder/gtkui/main.py:624
 msgid "A_pply"
@@ -500,7 +500,7 @@ msgstr "_Použiť"
 
 #: src/gpodder/gtkui/main.py:660
 msgid "Uploading subscriptions"
-msgstr "Nahrávánie odberov"
+msgstr "Nahrávanie odberov"
 
 #: src/gpodder/gtkui/main.py:661
 msgid "Your subscriptions are being uploaded to the server."
