Updated Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-09-21 04:10-0600\n"
-"PO-Revision-Date: 2023-07-24 11:46+0200\n"
+"PO-Revision-Date: 2023-09-22 18:22+0200\n"
 "Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -349,29 +349,28 @@ msgstr "Gisteren"
 
 #: src/gpodder/util.py:585
 msgid "kB"
-msgstr ""
+msgstr "kB"
 
 #: src/gpodder/util.py:586
 msgid "MB"
-msgstr ""
+msgstr "MB"
 
 #: src/gpodder/util.py:587
 msgid "GB"
-msgstr ""
+msgstr "GB"
 
 #: src/gpodder/util.py:591
-#, fuzzy
 #| msgid "KiB/s"
 msgid "KiB"
-msgstr "KiB/s"
+msgstr "KiB"
 
 #: src/gpodder/util.py:592
 msgid "MiB"
-msgstr ""
+msgstr "MiB"
 
 #: src/gpodder/util.py:593
 msgid "GiB"
-msgstr ""
+msgstr "GiB"
 
 #: src/gpodder/util.py:599 src/gpodder/util.py:602
 msgid "(unknown)"
@@ -379,7 +378,7 @@ msgstr "(onbekend)"
 
 #: src/gpodder/util.py:609
 msgid "B"
-msgstr ""
+msgstr "B"
 
 #: src/gpodder/util.py:1507 src/gpodder/util.py:1529
 #, python-format
@@ -487,7 +486,7 @@ msgstr "Standaardtoepassing"
 #: src/gpodder/gtkui/download.py:98
 #, python-format
 msgid "%(status)s (%(progress).0f%%, %(rate)s/s, %(remaining)s)"
-msgstr ""
+msgstr "%(status)s (%(progress).0f%%, %(rate)s/s, %(remaining)s)"
 
 #: src/gpodder/gtkui/main.py:174 share/applications/gpodder.desktop.in.h:1
 msgid "gPodder"
@@ -1994,8 +1993,7 @@ msgid "Renaming all downloaded episodes"
 msgstr "Bezig met hernoemen…"
 
 #: share/gpodder/extensions/rename_download.py:81
-#, fuzzy, python-format
-#| msgid "Renamed %(count)d downloaded episodes"
+#, python-format
 msgid "Renamed %(count)d downloaded episode"
 msgid_plural "Renamed %(count)d downloaded episodes"
 msgstr[0] "Er zijn %(count)d afleveringen hernoemd"
@@ -2429,6 +2427,8 @@ msgid ""
 "Sync existing episodes on device when file size differs from gPodder "
 "(disable if device modifies files)"
 msgstr ""
+"Bestaande afleveringen op apparaat synchroniseren als de bestandsgrootte "
+"afwijkt van gPodder (schakel uit bij door apparaat aangepaste bestanden)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:35
 msgid "Devices"
