--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-09-21 04:10-0600\n"
-"PO-Revision-Date: 2023-09-14 13:37+0200\n"
+"PO-Revision-Date: 2023-09-23 13:37+0200\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/gpodder/language/"
 "sk/)\n"
@@ -345,29 +345,27 @@ msgstr "Včera"
 
 #: src/gpodder/util.py:585
 msgid "kB"
-msgstr ""
+msgstr "kB"
 
 #: src/gpodder/util.py:586
 msgid "MB"
-msgstr ""
+msgstr "MB"
 
 #: src/gpodder/util.py:587
 msgid "GB"
-msgstr ""
+msgstr "GB"
 
 #: src/gpodder/util.py:591
-#, fuzzy
-#| msgid "KiB/s"
 msgid "KiB"
-msgstr "KiB/s"
+msgstr "KiB"
 
 #: src/gpodder/util.py:592
 msgid "MiB"
-msgstr ""
+msgstr "MiB"
 
 #: src/gpodder/util.py:593
 msgid "GiB"
-msgstr ""
+msgstr "GiB"
 
 #: src/gpodder/util.py:599 src/gpodder/util.py:602
 msgid "(unknown)"
@@ -375,7 +373,7 @@ msgstr "(neznáme)"
 
 #: src/gpodder/util.py:609
 msgid "B"
-msgstr ""
+msgstr "B"
 
 #: src/gpodder/util.py:1507 src/gpodder/util.py:1529
 #, python-format
@@ -486,7 +484,7 @@ msgstr "Predvolená aplikácia"
 #: src/gpodder/gtkui/download.py:98
 #, python-format
 msgid "%(status)s (%(progress).0f%%, %(rate)s/s, %(remaining)s)"
-msgstr ""
+msgstr "%(status)s (%(progress).0f%%, %(rate)s/s, %(remaining)s)"
 
 #: src/gpodder/gtkui/main.py:174 share/applications/gpodder.desktop.in.h:1
 msgid "gPodder"
@@ -2008,12 +2006,11 @@ msgid "Renaming all downloaded episodes"
 msgstr "Premenovanie všetkých stiahnutých epizód"
 
 #: share/gpodder/extensions/rename_download.py:81
-#, fuzzy, python-format
-#| msgid "Renamed %(count)d downloaded episodes"
+#, python-format
 msgid "Renamed %(count)d downloaded episode"
 msgid_plural "Renamed %(count)d downloaded episodes"
-msgstr[0] "Premenovaných %(count)d stiahnutých epizód"
-msgstr[1] "Premenovaných %(count)d stiahnutých epizód"
+msgstr[0] "Premenovaná %(count)d stiahnutá epizóda"
+msgstr[1] "Premenované %(count)d stiahnuté epizódy"
 msgstr[2] "Premenovaných %(count)d stiahnutých epizód"
 
 #: share/gpodder/extensions/rm_ogg_cover.py:37
@@ -2437,6 +2434,8 @@ msgid ""
 "Sync existing episodes on device when file size differs from gPodder "
 "(disable if device modifies files)"
 msgstr ""
+"Synchronizovať existujúce epizódy so zariadením, keď sa líšia veľkosťou "
+"súborov (zakážte ak zariadenie modifikuje súbory)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:35
 msgid "Devices"
