--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1077,7 +1077,7 @@ msgstr "未选中播客"
 
 #: src/gpodder/gtkui/main.py:3257
 msgid "Please select a podcast in the podcasts list to update."
-msgstr "请选择博客列表中的播客来更新。"
+msgstr "请选择播客列表中的播客来更新。"
 
 #: src/gpodder/gtkui/main.py:3389
 #, python-format
@@ -1119,7 +1119,7 @@ msgstr "请登录后下载您的订阅。"
 
 #: src/gpodder/gtkui/main.py:3598
 msgid "Please select a podcast in the podcasts list to edit."
-msgstr "请选择博客列表中的播客来编辑。"
+msgstr "请选择播客列表中的播客来编辑。"
 
 #: src/gpodder/gtkui/main.py:3612
 msgid "Podcast"
@@ -1146,7 +1146,7 @@ msgid ""
 "This podcast and all its episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"此博客及其所有单集节目将被永久删除。\n"
+"此播客及其所有单集节目将被永久删除。\n"
 "你确定要继续码？"
 
 #: src/gpodder/gtkui/main.py:3636
@@ -1572,7 +1572,7 @@ msgstr "加载播客中"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:239
 msgid "Please wait while the podcast list is downloaded"
-msgstr "下载博客列表时请等待"
+msgstr "下载播客列表时请等待"
 
 #: src/gpodder/gtkui/desktop/preferences.py:46
 #: src/gpodder/gtkui/desktop/preferences.py:89
@@ -1974,7 +1974,7 @@ msgstr "将播客声音传输到 Sonos 音响"
 
 #: share/gpodder/extensions/tagging.py:50
 msgid "Tag downloaded files using Mutagen"
-msgstr "用 MMutagen 给已下载文件打标签"
+msgstr "用 Mutagen 给已下载文件打标签"
 
 #: share/gpodder/extensions/tagging.py:51
 msgid "Add episode and podcast titles to MP3/OGG tags"
