--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -515,7 +515,7 @@ msgstr "选择想要执行的指令."
 
 #: src/gpodder/gtkui/main.py:624
 msgid "A_pply"
-msgstr "应用(_p)"
+msgstr "实施(_p)"
 
 #: src/gpodder/gtkui/main.py:660
 msgid "Uploading subscriptions"
@@ -2042,7 +2042,7 @@ msgid ""
 "Manage YouTube subscriptions using youtube-dl (pip install youtube_dl) or yt-"
 "dlp (pip install yt-dlp)"
 msgstr ""
-"使用 YouTube-dl (pip install youtube_dl) 或 yt-dlp (pip install yt-dlp) 管理 "
+"使用 youtube-dl (pip install youtube_dl) 或 yt-dlp (pip install yt-dlp) 管理 "
 "YouTube 订阅"
 
 #: share/gpodder/extensions/youtube-dl.py:42
@@ -2051,12 +2051,12 @@ msgid ""
 "Your version of youtube-dl/yt-dlp %(have_version)s has known issues, please "
 "upgrade to %(want_version)s or newer."
 msgstr ""
-"你的 YouTube-dl/yt-dlp 版本 %(have_version)s 有已知问题，请升级到 "
+"你的 youtube-dl/yt-dlp 版本 %(have_version)s 有已知问题，请升级到 "
 "%(want_version)s 或更新的版本。"
 
 #: share/gpodder/extensions/youtube-dl.py:531
 msgid "Old youtube-dl"
-msgstr "旧的 youTube-dl"
+msgstr "旧的 youtube-dl"
 
 #: share/gpodder/extensions/youtube-dl.py:535
 msgid "Download with youtube-dl"
@@ -2065,7 +2065,7 @@ msgstr "用 youtube-dl 下载"
 #: share/gpodder/extensions/youtube-dl.py:570
 msgid ""
 "Parse YouTube channel feeds with youtube-dl to access more than 15 episodes"
-msgstr "用 YouTube-dl 解析 YouTube 频道来访问超过 15 个单集"
+msgstr "用 youtube-dl 解析 YouTube 频道来访问超过 15 个单集"
 
 #: share/gpodder/extensions/youtube-dl.py:577
 msgid "Download all supported episodes with youtube-dl"
@@ -2080,7 +2080,7 @@ msgid ""
 "<b>Download with youtube-dl</b> appears in the episode menu when this option "
 "is disabled, and can be used to manually download from supported sites."
 msgstr ""
-"YouTube-dl 提供对额外 YoutTube 格式和 DRM 内容的访问。  下载来自 YouTube-dl "
+"youtube-dl 提供对额外 YouTube 格式和 DRM 内容的访问。  下载来自 youtube-dl "
 "支持的非 YouTube 站点的单集会 <b>失败</b>，除非你手动为每个站点<a "
 "href=\"https://gpodder.github.io/docs/youtube.html#formats\">添加自定义格式</"
 "a>。  禁用此选项时，<b>用 youtube-dl 下载</b>会出现在单集菜单中，并可以被用来"
@@ -2529,7 +2529,7 @@ msgstr "向右对齐单集发布栏"
 
 #: share/gpodder/ui/gtk/menus.ui.h:51
 msgid "Require control click to sort episodes"
-msgstr "需要操控单击来排序单集"
+msgstr "要排列单集顺序，需按住 Ctrl 键进行单击操作"
 
 #: share/gpodder/ui/gtk/menus.ui.h:52
 msgid "Visible columns"
